@@ -11,15 +11,19 @@ import org.uniremington.infrastructure.entity.PerfilEntity;
 import org.uniremington.shared.util.PerfilMapper;
 
 import java.util.List;
+import java.util.Objects;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @ApplicationScoped
 public class JpaPerfilRepository implements PerfilRepository {
 
     @PersistenceContext EntityManager em;
 
-    @Inject /*->*/ PerfilMapper mapper;
+    PerfilMapper mapper;
+
+    @Inject JpaPerfilRepository(PerfilMapper mapper){
+        this.mapper = mapper;
+    }
 
     @Override
     public Optional<Perfil> findById(Long id) {
@@ -33,22 +37,16 @@ public class JpaPerfilRepository implements PerfilRepository {
                 .getResultList()
                 .stream()
                 .map(mapper::toModel)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     @Transactional
-    public Perfil save(Perfil usuario) {
+    public Perfil save(Perfil usuario, String action) {
 
         PerfilEntity entity = mapper.toEntity(usuario);
 
-        if (entity.getId() == null) {
-            throw new IllegalArgumentException("La cédula no puede ser nula al guardar un perfil");
-        }
-
-        PerfilEntity existing = em.find(PerfilEntity.class, entity.getId());
-
-        if (existing == null) {
+        if (Objects.equals(action, "save")) {
             em.persist(entity);
         } else {
             entity = em.merge(entity);
@@ -63,10 +61,8 @@ public class JpaPerfilRepository implements PerfilRepository {
     @Transactional
     public void deleteById(Long id) {
         PerfilEntity entity = em.find(PerfilEntity.class, id);
-        if (entity != null) {
-            entity.setEstado(false);
-            em.merge(entity);
-        }
+        entity.setEstado(false);
+        em.merge(entity);
     }
 
 }
